--- a/dark-Theme/footer.html
+++ b/dark-Theme/footer.html
@@ -1,5 +1,5 @@
     <footer>
-        Theme available on <a href="https://github.com/lanffy/Nginx-Fancyindex-Theme">GitHub</a> by <a href="https://github.com/lanffy">lanffy</a>, Inspired by<a href="https://github.com/Naereen/Nginx-Fancyindex-Theme">Naereen</a>, © 2015-17, released under <a href="https://lbesson.mit-license.org/">the MIT License</a>.
+        Powered by GaoPeng, Shanghai
     </footer>
     <script src="/Nginx-Fancyindex-Theme/dark-Theme/addNginxFancyIndexForm.js"></script>
 </body>
